--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,22 +1,12 @@
-<!-- <div class="jumbotron">
-    <h1 class="display-4">Welcome to Our Vocal Studio!</h1>
-    <p class="lead">We offer the best vocal training in the city.</p>
-    <hr class="my-4">
-    <p>Learn more about our services and instructors.</p>
-    <a class="btn btn-primary btn-lg" routerLink="/services" role="button">Our Services</a>
-</div> -->
+<div class="flex-row center-row home">
 
-<div class="home-container">
-    <mat-card>
-        <mat-card-header>
-            <mat-card-title>Welcome to Our Vocal Studio!</mat-card-title>
-            <mat-card-subtitle>We offer the best vocal training in the city.</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-            <p>Learn more about our services and instructors.</p>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-raised-button color="accent" routerLink="/services">Our Services</button>
-        </mat-card-actions>
-    </mat-card>
+    <!-- add logo moving to the header when srolling down -->
+    <div class="home-content flex-col">
+        <h1>Добро пожаловать в <span class="sigma-font">ΣΙΓΜΑ</span>, вокальное место</h1>
+        <p>Раскройте свой вокальный потенциал с помощью индивидуальных занятий по вокалу с опытным профессионалом.</p>
+        <p>Пeрвоe занятие бeсплатнo!</p>
+    </div>
+    
+    <img class="home-img" src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/cat_S_sing2_png.jpg?ver=1" alt="Tutor in action">
+
 </div>
