--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,6 @@
 * {
-    --bright-brand-color: #BFD1A5;
+    --bright-brand-color: #efffd8;
+    // --bright-brand-color: #BFD1A5;
     --light-brand-color: #94AA73;
     --brand-color: #738B51;
     --shaded-brand-color: #526931;
