--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="main-wrapper">
-    <app-header></app-header>
+    <app-header class="w-100"></app-header>
     <!-- <router-outlet></router-outlet> -->
 
     <app-home></app-home>
