--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,7 +1,27 @@
-.home-container {
-    background: var(--light-brand-color);
+.home {
+    // background: var(--bright-brand-color);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+// .home-img {
+//     height: 100px;
+// }
+
+.home-content {
+    z-index: 2;
+}
+.home-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-position: center;
+
+    z-index: 1;
+    opacity: 1;
 }
