--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <app-header class="w-100"></app-header>
     <!-- <router-outlet></router-outlet> -->
 
-    <app-home></app-home>
-    <app-about></app-about>
-    <app-contacts></app-contacts>
+    <app-home id="home-section"></app-home>
+    <app-about id="about-section"></app-about>
+    <app-contacts id="contacts-section"></app-contacts>
 </div>
