--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -1,1 +1,33 @@
-<p>classes works!</p>
+<div class="section">
+
+    <div class="flex-col plug">
+        <h2>Classes</h2>
+    </div>
+
+    <div>
+        <!-- <div class="details" style="display: none;"> -->
+        <span>я oпытный педагог пo эcтрадно-джaзoвому вoкалу для взрocлыx и дeтей, певица, aктриcа.
+            Преподаю вокал по авторской, лёгкой для восприятия, эффективной методике.
+            Вы получите первые результаты быстро!
+            Работаю с абсолютно любым уровнем.</span>
+
+        <span>Что вы получите на занятиях:
+            • постановка правильного вокального дыхания
+            • авторские распевки
+            • постановка голоса
+            • развитие музыкального слуха
+            • разучим Ваши любимые песни
+            • снятие мышечных зажимов
+            • подготовка к конкурсам, фестивалям, концертам
+            • разбор и анализ песни
+            • проработка сценического образа
+            ...и многое другое по Вашему запросу
+            Результат Вы почувствуете уже после первого занятия.</span>
+
+        <span>Стоимость разового занятия по вокалу - 2000 ₽
+            Также есть возможность заниматься по абонементам:
+            4 занятия по вокалу - 7000 ₽ (1750 ₽/занятие)
+            8 занятий по вокалу - 12 000 ₽ (1500 ₽/занятие)</span>
+    </div>
+
+</div>
