--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="flex-row center-row home">
+<div class="flex-col center-row section">
 
     <!-- add logo moving to the header when srolling down -->
     <div class="home-content flex-col">
@@ -7,6 +7,6 @@
         <p>Пeрвоe занятие бeсплатнo!</p>
     </div>
     
-    <img class="home-img" src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/cat_S_sing2_png.jpg?ver=1" alt="Tutor in action">
+    <img class="w-h-100 home-img" src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/cat_S_sing2_png.jpg?ver=1" alt="Tutor in action">
 
 </div>
