--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 
     <app-home id="home-section"></app-home>
     <app-about id="about-section"></app-about>
+    <app-classes id="classes-section"></app-classes>
     <app-contacts id="contacts-section"></app-contacts>
 </div>
