--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,17 +1,5 @@
-.about {
-  height: 100vh;
-}
-
 .embla {
-  margin-bottom: 20px;
-
-  // &__container {
-  //   border: 1px solid red;
-  // }
-
-  // &__slide {
-  //   border: 1px solid blue;
-  // }
+  display: flex;
 }
 
 .embla {
@@ -50,7 +38,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background-color: #fff;
+  background-color: var(--light-color);
   border: none;
   padding: 10px;
   cursor: pointer;
@@ -72,18 +60,15 @@
 .card {
   position: relative;
   overflow: hidden;
-  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  color: #fff;
+  color: var(--light-color);
 
   &__background {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     background-size: cover;
     background-position: center;
     z-index: 0;
@@ -95,6 +80,11 @@
     z-index: 1;
   }
 
+  &__header {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px 20px;
+  }
+
   &__content {
     background: rgba(0, 0, 0, 0.5);
     padding: 20px;
@@ -103,10 +93,5 @@
     span {
       display: block;
     }
-  }
-
-  &__header {
-    background: rgba(0, 0, 0, 0.7);
-    padding: 10px 20px;
   }
 }
