--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,7 +1,8 @@
-<div class="contacts">
+<div class="section">
 
-
-    <h2>Contact me</h2>
+    <div class="flex-col plug">
+        <h2>Contact me</h2>
+    </div>
 
     <mat-card>
         <mat-card-header>
