--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,25 +8,30 @@
     <div class="flex-row center-row menu">
         <button id="home-button" mat-button mat-raised-button data-section="home-section"
             (click)="scrollToSection('home-section')">
-            Home
+            ГЛАВНАЯ
         </button>
         <button id="about-button" mat-button mat-raised-button data-section="about-section"
             (click)="scrollToSection('about-section')">
-            About
+            О ΣΙΓΜΑ
         </button>
         <button id="classes-button" mat-button mat-raised-button data-section="classes-section"
             (click)="scrollToSection('classes-section')">
-            Sign up for a class
+            ЗАНЯТИЯ
         </button>
         <button id="contact-button" mat-button mat-raised-button data-section="contacts-section"
             (click)="scrollToSection('contacts-section')">
-            Contact
+            КОНТАКТЫ
         </button>
-        <button mat-icon-button>Account</button>
+        <button mat-icon-button>
+            АККАУНТ
+        </button>
     </div>
 
-    <div class="social-media">
-        <div></div>
+    <div class="flex-row center-row h-100 social">
+        <div class="social__item">VK</div>
+        <div class="social__item">Tg</div>
+        <div class="social__item">In</div>
+        <div class="social__item">Fb</div>
     </div>
 
     <div class="piano-keys" style="display: none;">
