--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -1,33 +1,103 @@
-<div class="section">
+<div class="flex-col section">
 
     <div class="flex-col plug">
         <h2>Classes</h2>
     </div>
 
-    <div>
-        <!-- <div class="details" style="display: none;"> -->
-        <span>я oпытный педагог пo эcтрадно-джaзoвому вoкалу для взрocлыx и дeтей, певица, aктриcа.
-            Преподаю вокал по авторской, лёгкой для восприятия, эффективной методике.
-            Вы получите первые результаты быстро!
-            Работаю с абсолютно любым уровнем.</span>
+    <div class="h-100 content">
 
-        <span>Что вы получите на занятиях:
-            • постановка правильного вокального дыхания
-            • авторские распевки
-            • постановка голоса
-            • развитие музыкального слуха
-            • разучим Ваши любимые песни
-            • снятие мышечных зажимов
-            • подготовка к конкурсам, фестивалям, концертам
-            • разбор и анализ песни
-            • проработка сценического образа
-            ...и многое другое по Вашему запросу
-            Результат Вы почувствуете уже после первого занятия.</span>
+        <div class="flex-col center-row left-col">
+            <h3 class="cards__title">Почему <span class="sigma-font">ΣΙΓΜΑ</span> ?</h3>
+            <div class="h-100 cards">
+                <mat-card class="h-100 card">
+                    <mat-card-header class="flex-row center-row card__header">
+                        <mat-card-title>Вокал для всех</mat-card-title>
+                        <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_mike_back.jpg?ver=0"
+                            alt="icon__mike" class="card__icon">
+                    </mat-card-header>
+                    <mat-card-content class="card__content">
+                        <span>Занятия построены на моей авторской эффективной методике, лёгкой для восприятия и
+                            позволяющей быстро достичь результатов. Уже на первом уроке вы научитесь соединять голос и
+                            тело и услышите новые краски и возможности в своём голосе. Мои занятия подходят ученикам
+                            любого уровня
+                            подготовки.
+                        </span>
+                    </mat-card-content>
+                </mat-card>
 
-        <span>Стоимость разового занятия по вокалу - 2000 ₽
-            Также есть возможность заниматься по абонементам:
-            4 занятия по вокалу - 7000 ₽ (1750 ₽/занятие)
-            8 занятий по вокалу - 12 000 ₽ (1500 ₽/занятие)</span>
+                <mat-card class="h-100 card">
+                    <mat-card-header class="flex-row center-row card__header">
+                        <mat-card-title>Индивидуальный <br> план обучения</mat-card-title>
+                        <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_note_back.jpg?ver=0"
+                            alt="icon__note" class="card__icon">
+                    </mat-card-header>
+                    <mat-card-content class="card__content">
+                        <span>На первой встрече мы проведём диагностику вашего голоса и вместе разработаем эффективный
+                            план
+                            работы. После мы подберём для вас песни, которые выгодно подчеркнут ваш голос и помогут
+                            освоить
+                            новые техники. Вы можете выбрать песню на свой вкус или предложить свой вариант.
+                        </span>
+                    </mat-card-content>
+                </mat-card>
+
+                <mat-card class="h-100 card">
+                    <mat-card-header class="flex-row center-row card__header">
+                        <mat-card-title>Осуществите <br> свою мечту</mat-card-title>
+                        <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_star_back.jpg?ver=0"
+                            alt="icon__star" class="card__icon">
+                    </mat-card-header>
+                    <mat-card-content class="card__content">
+                        <span>Начав заниматься вокалом, вы сможете исполнить любимую песню, развить
+                            свой
+                            уникальный стиль и звучание, научиться выступать перед аудиторией. Это уникальная
+                            возможность
+                            проявить творческие способности, преодолеть страх сцены и развить уверенность в себе.
+                        </span>
+                    </mat-card-content>
+                </mat-card>
+
+                <mat-card class="h-100 card">
+                    <mat-card-header class="flex-row center-row card__header">
+                        <mat-card-title>Раскройте себя</mat-card-title>
+                        <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_sing_back.jpg?ver=0"
+                            alt="icon__sing" class="card__icon">
+                    </mat-card-header>
+                    <mat-card-content class="card__content">
+                        <span>Уроки вокала помогут вам раскрыть свой потенциал, обрести уверенность и получать
+                            удовольствие от процесса. Вы научитесь правильному дыханию, разовьёте свой музыкальный слух,
+                            устраните телесные зажимы. Поставив голос, вы будете звучать естественно и наслаждаться
+                            своим природным тембром.
+                        </span>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+        </div>
+
+        <div class="flex-col right-col">
+            <div class="flex-col price">
+                <span class="price-item">
+                    Первое пробное занятие бесплатно!
+                </span>
+                <span class="price-item">
+                    Разовое занятие 2000 рублей.
+                </span>
+                <span class="price-item">
+                    Также доступны абонементы:
+                </span>
+                <span class="price-item">
+                    • 4 занятия за 7000 рублей (1750 рублей за занятие)
+                </span>
+                <span class="price-item">
+                    • 8 занятий за 12 000 рублей (1500 рублей за занятие)
+                </span>
+            </div>
+
+            <div class="flex-col">
+                <span>Занятия проходят в уютной студии в центре Московского района Санкт-Петербурга, качественная
+                    аппаратура, чай и кофе - всё для Вашего комфорта и максимального результата от занятий</span>
+            </div>
+        </div>
+
     </div>
-
 </div>
