--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,12 +3,9 @@
 }
 
 mat-toolbar {
-    // background: var(--brand-color) !important;
-    height: 110px !important;
+    height: 80px !important;
     padding: 0;
-    // transition: background-color 0.5s ease-in-out;
     transition: background-color 0.5s ease-in-out, opacity 0.5s ease-in-out;
-    // opacity: 1;
     align-items: flex-start;
 }
 
@@ -25,7 +22,6 @@ mat-toolbar {
     width: 200px;
     background: var(--brand-color) !important;
     color: var(--light-color);
-    // padding: 0 24px;
     cursor: pointer;
     justify-content: center;
 
@@ -35,8 +31,8 @@ mat-toolbar {
     }
 
     &__sublabel {
-        font-size: 24px;
-        line-height: 30px;
+        font-size: 17px;
+        line-height: 18px;
     }
 }
 
@@ -54,6 +50,7 @@ mat-toolbar {
         height: 100%;
         max-height: none;
         border-radius: 0;
+        font-size: 18px;
     }
 
     .highlighted {
@@ -66,6 +63,24 @@ mat-toolbar {
     }
 }
 
+.social {
+    // display: none;
+    width: 200px;
+    background: var(--brand-color) !important;
+    color: var(--light-color);
+    justify-content: center;
+    gap: 20px;
+
+    &__item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 24px;
+        height: 24px;
+        border-radius: 4px;
+        border: 1px solid var(--light-color);
+    }
+}
 
 .piano-keys {
     display: flex;
