--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -5,99 +5,111 @@
     </div>
 
     <div class="h-100 content">
+        <div class="flex-col center-col left-col">
+            <div class="flex-col center-row h-100">
+                <h3 class="cards__title">Почему <span class="sigma-font">ΣΙΓΜΑ</span> ?</h3>
+                <div class="center-row h-100 cards">
+                    <mat-card class="h-100 card">
+                        <mat-card-header class="flex-row center-row card__header">
+                            <mat-card-title>Вокал для всех</mat-card-title>
+                            <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_mike_back.jpg?ver=0"
+                                alt="icon__mike" class="card__icon">
+                        </mat-card-header>
+                        <mat-card-content class="card__content">
+                            <span>Занятия построены на моей авторской эффективной методике, лёгкой для восприятия и
+                                позволяющей быстро достичь результатов. Уже на первом уроке вы научитесь соединять голос
+                                и
+                                тело и услышите новые краски и возможности в своём голосе. Мои занятия подходят ученикам
+                                любого уровня подготовки.
+                            </span>
+                        </mat-card-content>
+                    </mat-card>
 
-        <div class="flex-col center-row left-col">
-            <h3 class="cards__title">Почему <span class="sigma-font">ΣΙΓΜΑ</span> ?</h3>
-            <div class="h-100 cards">
-                <mat-card class="h-100 card">
-                    <mat-card-header class="flex-row center-row card__header">
-                        <mat-card-title>Вокал для всех</mat-card-title>
-                        <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_mike_back.jpg?ver=0"
-                            alt="icon__mike" class="card__icon">
-                    </mat-card-header>
-                    <mat-card-content class="card__content">
-                        <span>Занятия построены на моей авторской эффективной методике, лёгкой для восприятия и
-                            позволяющей быстро достичь результатов. Уже на первом уроке вы научитесь соединять голос и
-                            тело и услышите новые краски и возможности в своём голосе. Мои занятия подходят ученикам
-                            любого уровня
-                            подготовки.
-                        </span>
-                    </mat-card-content>
-                </mat-card>
+                    <mat-card class="h-100 card">
+                        <mat-card-header class="flex-row center-row card__header">
+                            <mat-card-title>Индивидуальный <br> план обучения</mat-card-title>
+                            <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_note_back.jpg?ver=0"
+                                alt="icon__note" class="card__icon">
+                        </mat-card-header>
+                        <mat-card-content class="card__content">
+                            <span>На первой встрече мы проведём диагностику вашего голоса и вместе разработаем
+                                эффективный
+                                план работы. После мы подберём для вас песни, которые выгодно подчеркнут ваш голос и
+                                помогут
+                                освоить новые техники. Вы можете выбрать песню на свой вкус или предложить свой вариант.
+                            </span>
+                        </mat-card-content>
+                    </mat-card>
 
-                <mat-card class="h-100 card">
-                    <mat-card-header class="flex-row center-row card__header">
-                        <mat-card-title>Индивидуальный <br> план обучения</mat-card-title>
-                        <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_note_back.jpg?ver=0"
-                            alt="icon__note" class="card__icon">
-                    </mat-card-header>
-                    <mat-card-content class="card__content">
-                        <span>На первой встрече мы проведём диагностику вашего голоса и вместе разработаем эффективный
-                            план
-                            работы. После мы подберём для вас песни, которые выгодно подчеркнут ваш голос и помогут
-                            освоить
-                            новые техники. Вы можете выбрать песню на свой вкус или предложить свой вариант.
-                        </span>
-                    </mat-card-content>
-                </mat-card>
+                    <mat-card class="h-100 card">
+                        <mat-card-header class="flex-row center-row card__header">
+                            <mat-card-title>Осуществите <br> свою мечту</mat-card-title>
+                            <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_star_back.jpg?ver=0"
+                                alt="icon__star" class="card__icon">
+                        </mat-card-header>
+                        <mat-card-content class="card__content">
+                            <span>Начав заниматься вокалом, вы сможете исполнить любимую песню, развить
+                                свой уникальный стиль и звучание, научиться выступать перед аудиторией. Это уникальная
+                                возможность проявить творческие способности, преодолеть страх сцены и развить
+                                уверенность в
+                                себе.
+                            </span>
+                        </mat-card-content>
+                    </mat-card>
 
-                <mat-card class="h-100 card">
-                    <mat-card-header class="flex-row center-row card__header">
-                        <mat-card-title>Осуществите <br> свою мечту</mat-card-title>
-                        <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_star_back.jpg?ver=0"
-                            alt="icon__star" class="card__icon">
-                    </mat-card-header>
-                    <mat-card-content class="card__content">
-                        <span>Начав заниматься вокалом, вы сможете исполнить любимую песню, развить
-                            свой
-                            уникальный стиль и звучание, научиться выступать перед аудиторией. Это уникальная
-                            возможность
-                            проявить творческие способности, преодолеть страх сцены и развить уверенность в себе.
-                        </span>
-                    </mat-card-content>
-                </mat-card>
-
-                <mat-card class="h-100 card">
-                    <mat-card-header class="flex-row center-row card__header">
-                        <mat-card-title>Раскройте себя</mat-card-title>
-                        <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_sing_back.jpg?ver=0"
-                            alt="icon__sing" class="card__icon">
-                    </mat-card-header>
-                    <mat-card-content class="card__content">
-                        <span>Уроки вокала помогут вам раскрыть свой потенциал, обрести уверенность и получать
-                            удовольствие от процесса. Вы научитесь правильному дыханию, разовьёте свой музыкальный слух,
-                            устраните телесные зажимы. Поставив голос, вы будете звучать естественно и наслаждаться
-                            своим природным тембром.
-                        </span>
-                    </mat-card-content>
-                </mat-card>
+                    <mat-card class="h-100 card">
+                        <mat-card-header class="flex-row center-row card__header">
+                            <mat-card-title>Раскройте себя</mat-card-title>
+                            <img src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/icon_sing_back.jpg?ver=0"
+                                alt="icon__sing" class="card__icon">
+                        </mat-card-header>
+                        <mat-card-content class="card__content">
+                            <span>Уроки вокала помогут вам раскрыть свой потенциал, обрести уверенность и получать
+                                удовольствие от процесса. Вы научитесь правильному дыханию, разовьёте свой музыкальный
+                                слух,
+                                устраните телесные зажимы. Поставив голос, вы будете звучать естественно и наслаждаться
+                                своим природным тембром.
+                            </span>
+                        </mat-card-content>
+                    </mat-card>
+                </div>
             </div>
         </div>
 
-        <div class="flex-col right-col">
-            <div class="flex-col price">
-                <span class="price-item">
-                    Первое пробное занятие бесплатно!
-                </span>
-                <span class="price-item">
-                    Разовое занятие 2000 рублей.
-                </span>
-                <span class="price-item">
-                    Также доступны абонементы:
-                </span>
-                <span class="price-item">
-                    • 4 занятия за 7000 рублей (1750 рублей за занятие)
-                </span>
-                <span class="price-item">
-                    • 8 занятий за 12 000 рублей (1500 рублей за занятие)
-                </span>
-            </div>
+        <div class="flex-col center-col right-col">
+            <div class="flex-col h-100 wrapper">
+                <div class="flex-col center-row price">
+                    <span class="price__first">
+                        Первое пробное занятие бесплатно!
+                    </span>
+                    <button mat-button mat-raised-button>ЗАПИСАТЬСЯ</button>
+                    <span class="price__list">
+                        Прайс-лист:
+                    </span>
+                    <table class="price__table">
+                        <tr>
+                            <td>Разовое занятие</td>
+                            <td>2000 рублей</td>
+                        </tr>
+                        <tr>
+                            <td>Абонемент на 4 занятия</td>
+                            <td>7000 рублей <br> <span>1750 рублей за занятие</span></td>
+                        </tr>
+                        <tr>
+                            <td>Абонемент на 8 занятий</td>
+                            <td>12000 рублей <br> <span>1500 рублей за занятие</span></td>
+                        </tr>
+                    </table>
+                </div>
 
-            <div class="flex-col">
-                <span>Занятия проходят в уютной студии в центре Московского района Санкт-Петербурга, качественная
-                    аппаратура, чай и кофе - всё для Вашего комфорта и максимального результата от занятий</span>
+                <div class="flex-col info">
+                    <span>Узнать больше:</span>
+                    <div class="flex-row center-row">
+                        <button mat-button mat-raised-button>о преподавателе</button>
+                        <button mat-button mat-raised-button>о студии</button>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
 </div>
