--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -93,6 +93,7 @@
     padding: 20px 40px 40px 40px;
     transition: background 0.3s ease;
     font-size: 18px;
+    text-align: justify;
 
     span {
       display: block;
