--- a/src/app/components/classes/classes.component.scss
+++ b/src/app/components/classes/classes.component.scss
@@ -1,19 +1,15 @@
 .content {
     display: grid;
-    grid-template-rows: 1fr;
     grid-template-columns: 6fr 4fr;
+    grid-template-rows: 1fr;
+    gap: 5%;
+    padding: 0 5%;
 }
 
-.left-col {
-    // width: 100%;
-}
-
-.right-col {
+.wrapper {
     background-color: var(--light-color);
     box-shadow: 0 0 4px var(--dark-alt-color);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    padding: 20px;
 }
 
 .cards {
@@ -22,6 +18,7 @@
     grid-template-rows: 1fr 1fr;
     gap: 20px;
     margin-bottom: 20px;
+    align-items: center;
 
     &__title {
         margin: 15px 0;
@@ -56,23 +53,82 @@
     &__content {
         font-size: 14px;
         color: var(--dark-alt-color);
+        text-align: justify;
     }
 }
 
 .price {
-    margin-top: 60px;
-    color: var(--dark-alt-color);
+    max-width: 400px;
+    margin-top: 40px;
+    font-size: 16px;
+
+    &__first {
+        font-weight: 600;
+        font-size: 22px;
+        text-align: center;
+    }
+
+    button {
+        width: 300px;
+        height: 60px;
+        margin: 15px 0;
+        background: var(--light-select-color);
+        border: 5px solid var(--dark-alt-color);
+        border-radius: 30px;
+        color: var(--light-color);
+        font-size: 22px;
+    }
+
+    &__list {
+        font-size: 20px;
+        text-align: center;
+        margin-bottom: 0;
+    }
+
+    &__table {
+        color: var(--dark-alt-color);
+        width: 100%;
+        border-spacing: 0 10px;
+
+        td {
+            padding: 8px 0;
+            font-size: 16px;
+            border-bottom: 1px solid var(--dark-alt-color);
+
+            span {
+                font-size: 12px;
+            }
+
+            &:first-child {
+                color: #000;
+                width: 60%;
+            }
+
+            &:last-child {
+                text-align: right;
+                width: 40%;
+            }
+        }
+    }
+}
+
+.info {
+    max-width: 400px;
+    margin-top: 20px;
 
     span {
-        margin-bottom: 10px;
+        font-size: 20px;
+        text-align: center;
+        margin-bottom: 15px;
     }
 
-    .price-item {
-        margin-bottom: 10px;
-    }
-
-    .price-item:first-child {
-        font-weight: bold;
-        font-size: 1.2em;
+    button {
+        width: 150px;
+        height: 50px;
+        background: var(--light-select-color);
+        border: 5px solid var(--dark-alt-color);
+        border-radius: 25px;
+        color: var(--light-color);
+        font-size: 16px;
     }
 }
