--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,7 +5,6 @@
 mat-toolbar {
     height: 80px !important;
     padding: 0;
-    transition: background-color 0.5s ease-in-out, opacity 0.5s ease-in-out;
     align-items: flex-start;
 }
 
@@ -15,6 +14,7 @@ mat-toolbar {
 
     &:hover {
         opacity: 1;
+        height: 80px !important;
     }
 }
 
@@ -40,7 +40,10 @@ mat-toolbar {
     background: var(--brand-color) !important;
     color: var(--light-color);
 
-    transition: background-color 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    transition:
+        background-color 0.5s ease-in-out,
+        opacity 0.3s ease-in-out,
+        height 0.25s ease-in-out;
 
     flex-grow: 1;
     height: 100%;
