--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -6,13 +6,21 @@
     --shaded-brand-color: #526931;
     --dark-brand-color: #3F581B;
 
+    // --light-select-color: #B9857D;
+    // --select-color: #976158;
+    // --dark-select-color: #723E36;
+
     --light-select-color: #B9857D;
-    --select-color: #976158;
+    --select-color: #D16FAF;
     --dark-select-color: #723E36;
 
-    --light-alt-color: #71547B;
-    --alt-color: #5A3C64;
+    // --light-alt-color: #71547B;
+    // --alt-color: #5A3C64;
     --dark-alt-color: #42254B;
+
+    --light-alt-color: #E2CAF0;
+    --alt-color: #9E68BC;
+    // --dark-alt-color: #692B8B;
 
     --light-color: #f0f0f0;
     --gray-color: #7d7d7d;
